app/src/components/WalletHistory/TxHistoryTable/TxHistoryTable.scss
.activity-table {
  .text-successful,
  .text-confirmed {
    color: #2dcc70;
  }

  .text-denied,
  .text-rejected,
  .text-unapproved {
    color: #e20d0d;
  }

  .text-pending,
  .text-submitted {
    color: #b3c0ce;
  }

  .text-gray {
    color: #5c6c7f;
  }

  ::v-deep tr > td {
    cursor: pointer;
  }

  ::v-deep tr.expanded.expanded__content {
    box-shadow: none;
  }

  ::v-deep .v-pagination__item, ::v-deep .v-pagination__navigation {
    border: 0;
    background: none;
    color: var(--v-text_1-base);
    font-weight: 500;
    box-shadow: none;
    opacity: 0.7;
    &.primary {
      background: none;
      background-color: transparent !important;
      color: var(--v-primary-base);
      opacity: 1;
    }
  }
}

